# ProjectCourseWork1

./: .env.example  README.md  config.py  main.py  pyproject.toml
src/: logger.py  main.py  reports.py  result.json  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_utils.py  test_views.py
